[build-system]
requires = ["just-buildit", "numpy"]
build-backend = "just_buildit"

[project]
name = "doppler-dsp"
version = "0.7.0"
description = "Dead-simple, ultra-fast digital signal processing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "doppler contributors" },
]
keywords = ["dsp", "sdr", "fft", "fir", "nco", "signal-processing", "zmq", "iq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage      = "https://doppler-dsp.github.io/doppler/"
Repository    = "https://github.com/doppler-dsp/doppler"
Documentation = "https://doppler-dsp.github.io/doppler/"
"Bug Tracker" = "https://github.com/doppler-dsp/doppler/issues"

[project.optional-dependencies]
cli = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]
specan = [
    "rich>=13.0",
]
specan-web = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "websockets>=12.0",
]

[project.scripts]
doppler        = "doppler.cli.__main__:main"
doppler-source = "doppler.cli.source:main"
doppler-specan = "doppler.specan.__main__:main"
wavegen        = "doppler.wfmgen.cli:main"

[tool.just-buildit]
command = "make just-build"
editable_path = "src"

[tool.pytest.ini_options]
python_files = ["test_*.py", "bench_*.py"]
testpaths = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=6.0",
    "scipy>=1.17.1",
    "mkdocs-material>=9.5",
    "mkdocs-glightbox>=0.4",
    "mkdocstrings[python]>=0.29",
    "mkdoxy>=1.2.8",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "matplotlib>=3.10.9",
]

[tool.ruff]
line-length = 79
# jm-generated type stubs are owned by just-makeit (manifest-drift gate);
# never reformat them here. vendored third-party is left as upstream ships it.
# jm generates the re-export `__init__.py` shims and the pep723 `wavegen.py`
# CLI face; like the .pyi stubs they are owned by the manifest-drift gate.
extend-exclude = ["*.pyi", "vendor", "src/doppler/*/__init__.py", "wavegen.py"]
