[build-system]
# NumPy caps track its own Python floor (2.1 dropped 3.9, 2.3 dropped 3.10), so
# the cp39 wheel builds against numpy 2.0.x — its stable 2.x ABI means the wheel
# still runs against newer numpy at import time.
requires = [
    "just-buildit",
    "numpy; python_version >= '3.11'",
    "numpy<2.3; python_version == '3.10'",
    "numpy<2.1; python_version == '3.9'",
]
build-backend = "just_buildit"

[project]
name = "doppler-dsp"
version = "0.19.0"
description = "Dead-simple, ultra-fast digital signal processing."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "doppler contributors" },
]
keywords = ["dsp", "sdr", "fft", "fir", "nco", "signal-processing", "zmq", "iq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = [
    # Runtime NumPy floor follows its own Python support window (2.1 dropped
    # 3.9, 2.3 dropped 3.10); 3.9 users get numpy 2.0.x.
    "numpy; python_version >= '3.11'",
    "numpy<2.3; python_version == '3.10'",
    "numpy<2.1; python_version == '3.9'",
]

[project.urls]
Homepage      = "https://doppler-dsp.github.io/doppler/"
Repository    = "https://github.com/doppler-dsp/doppler"
Documentation = "https://doppler-dsp.github.io/doppler/"
"Bug Tracker" = "https://github.com/doppler-dsp/doppler/issues"

[project.optional-dependencies]
cli = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]
specan = [
    "rich>=13.0",
]
specan-web = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "websockets>=12.0",
]

[project.scripts]
doppler        = "doppler.cli.__main__:main"
doppler-source = "doppler.cli.source:main"
doppler-specan = "doppler.specan.__main__:main"
wfmgen         = "doppler.wfm.cli:main"

[tool.just-buildit]
command = "make just-build"
editable_path = "src"

[tool.pytest.ini_options]
python_files = ["test_*.py", "bench_*.py"]
testpaths = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3; python_version >= '3.10'",
    "pytest<9; python_version == '3.9'",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=6.0",
    # scipy / matplotlib follow their own Python floors (used only for tests,
    # benchmarks and the gallery — not shipped to end users).
    "scipy>=1.17.1; python_version >= '3.11'",
    "scipy<1.16; python_version == '3.10'",
    "scipy<1.14; python_version == '3.9'",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "matplotlib>=3.10.9; python_version >= '3.10'",
    "matplotlib<3.10; python_version == '3.9'",
]
# Docs toolchain is intentionally separate from dev so wheel builds can
# uv sync --no-group docs and avoid a docs-dep network blip failing a release.
docs = [
    "zensical>=0.0.29; python_version >= '3.10'",
    "mkdocs-glightbox>=0.4; python_version >= '3.10'",
    "mkdocstrings[python]>=0.29; python_version >= '3.10'",
    "mkdoxy>=1.2.8",
]

[tool.ruff]
line-length = 79
# jm-generated type stubs are owned by just-makeit (manifest-drift gate);
# never reformat them here. vendored third-party is left as upstream ships it.
# jm generates the re-export `__init__.py` shims; like the .pyi stubs they are
# owned by the manifest-drift gate.
extend-exclude = ["*.pyi", "vendor", "src/doppler/*/__init__.py"]
# pre-commit passes files explicitly; force-exclude ensures extend-exclude
# still applies even when ruff receives a .pyi path on the command line.
force-exclude = true
